--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>bobcat</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1</version>
-    <url>https://github.com/dreamatrix/bobcat</url>
+    <url>https://github.com/dreamtraveler/bobcat</url>
     <description>bobcat project</description>
 
     <modules>
